# ai_tool_verification_assistant

./: .gitignore  Makefile  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py  test_connection.py
config/: chatbot.yaml  generation.yaml  models.yaml  prompts.yaml
data/CollabCraft_Pro/: data_processing_agreement.html  security_whitepaper.html  service_level_agreement.html  terms_of_service.html  toc_data_processing_agreement.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/CollabInsights/: compliance_and_certifications.html  data_processing_agreement.html  privacy_policy.html  terms_of_service.html  toc_compliance_and_certifications.json  toc_data_processing_agreement.json  toc_privacy_policy.json  toc_terms_of_service.json  tool_info.json
data/CollabVision/: data_processing_agreement.html  security_whitepaper.html  service_level_agreement.html  terms_of_service.html  toc_data_processing_agreement.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/CompliConnect/: privacy_policy.html  security_whitepaper.html  service_level_agreement.html  terms_of_service.html  toc_privacy_policy.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/InsightAI_Nexus/: compliance_and_certifications.html  privacy_policy.html  service_level_agreement.html  terms_of_service.html  toc_compliance_and_certifications.json  toc_privacy_policy.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/tool1/: data_processing_agreement.html  security_whitepaper.html  service_level_agreement.html  terms_of_service.html  toc_data_processing_agreement.json  toc_privacy_policy.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/tool2/: compliance_and_certifications.html  privacy_policy.html  service_level_agreement.html  terms_of_service.html  toc_compliance_and_certifications.json  toc_data_processing_agreement.json  toc_privacy_policy.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/tool3/: data_processing_agreement.html  privacy_policy.html  security_whitepaper.html  terms_of_service.html  toc_data_processing_agreement.json  toc_privacy_policy.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/tool4/: compliance_and_certifications.html  privacy_policy.html  security_whitepaper.html  service_level_agreement.html  toc_compliance_and_certifications.json  toc_data_processing_agreement.json  toc_privacy_policy.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
data/tool5/: privacy_policy.html  security_whitepaper.html  service_level_agreement.html  terms_of_service.html  toc_compliance_and_certifications.json  toc_privacy_policy.json  toc_security_whitepaper.json  toc_service_level_agreement.json  toc_terms_of_service.json  tool_info.json
scripts/: __init__.py  generate_tool_info.py  section_generator.py  toc_generator.py  tool_generator.py  tool_info_generator.py
scripts/dataset/: generate_dataset.py
scripts/utils/: config.py  constants.py  generation_config.py  json_utils.py  section_generator.py  toc_generator.py  toc_utils.py  tool_generator.py  typings.py
src/: __init__.py  config.py  typings.py
src/chatbot/: __init__.py  cli.py  config.py  conversation.py  tool_definitions.py  tools.py
src/core/: settings.py
src/data_ingestion/: __init__.py
src/evaluation/: __init__.py
src/utils/: __init__.py  config.py  logger.py  openai_client.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py
